--- a/src/Pages/EventManager/EventManager.css
+++ b/src/Pages/EventManager/EventManager.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 0;
 }
 
 .header {
@@ -22,35 +23,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 10px; /* Adjusted margin for closer positioning */
 }
 
-.nfc-logo-container {
+.QR-logo-container {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    width: 100%;
+    justify-content: center;
+    margin: 10px auto;
+    max-width: 400px;
 }
 
-.nfc-logo {
-    max-width: 150px;
-    opacity: 0.5; /* Initial transparency */
-    transition: opacity 0.3s ease-in-out;
+.QR-logo {
+    max-width: 60%;
+    height: auto;
+    margin-top: 10px;
+    opacity: 1; /* Default opacity */
 }
 
-.nfc-logo-enabled {
-    opacity: 1;
-}
-
-.nfc-logo-disabled {
-    opacity: 0.5;
+.QR-logo-disabled {
+    opacity: 0.5; /* Reduced opacity when QR scanning is disabled */
 }
 
 .event-info {
     background-color: #f5f5f5;
     padding: 15px;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 10px;
     width: 100%;
     text-align: center;
 }
@@ -59,7 +59,7 @@
     margin-top: 0;
 }
 
-.nfc-toggle {
+.QR-toggle {
     display: flex;
     align-items: center;
     justify-content: center;
